--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,28 @@
-body{
-    background-color: #0097a7;
+body {
+    background: #649173;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #DBD5A4, #649173);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #DBD5A4, #649173); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    
 }
 
 .my-nav {
-    background-color: #4a148c;
+  /* background-image: linear-gradient(to right, #8360c3, #2ebf91); */
+  font-size: 20px;
+  font-weight: 500;
 }
 
 .card {
-    background-color: #e3f2fd;
+  /* background-color: #78e08f; */
+  /* color: white; */
+  background: #8e9eab; /* fallback for old browsers */
+  background: -webkit-linear-gradient(
+    to right,
+    #eef2f3,
+    #8e9eab
+  ); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(
+    to right,
+    #eef2f3,
+    #8e9eab
+  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
